# Tachygraphy-Microtext-Analysis-And-Normalization-Deployment-Source-HuggingFace_Streamlit_JPX14032025

./: .gitignore  .gitmodules  Dockerfile  Procfile  README.md  app_main_hf.py  dashboard.py  emotion_analysis.py  imports.py  packages.txt  pyproject.toml  pyprojectOLD.toml  requirements.txt  requirements_development.txt  requirements_linux.txt  requirements_windows.txt  uninstall.txt
.devcontainer/: .env  devcontainer.json
.github/workflows/: deploy_to_HF_space.yml  deploy_to_HF_space_DIRECT.yml  dfploy_to_HF_space_DOCKER  dfploy_to_HF_space_DOCKER.yml  ossar.yml
data_collection_form/: data_collector.py
emotionMoodtag_analysis/: emotion_analysis_main.py
emotionMoodtag_analysis/config/: stage2_models.json
emotionMoodtag_analysis/hmv_cfg_base_stage2/: model1.py  model2.py
minimal-req-for-deployment/: combo_poetry_req_min2.txt  mpm2.txt  mpm2_nov.txt  pyproject.toml
sentimentPolarity_analysis/: __init__.py  sentiment_analysis_main.py
sentimentPolarity_analysis/config/: stage1_models.json
sentimentPolarity_analysis/hmv_cfg_base_stage1/: __init__.py  imports.py  model1.py  model2.py  model3.py  model4.py
sentiment_analysis/: sentiment_analysis.py  sentiment_analysis_main.py
sentiment_analysis/config/: stage1_models.json
sentiment_analysis/hmv_cfg_base_stage1/: __init__.py  imports.py  model1.py  model2.py  model3.py  model4.py  stage1_bert_architecture.py
src/bq-helper/: README.md  bq_helper.py  setup.py  test_helper.py
stacked_stacking_stages/: stacking_stages.py
stacked_stacking_stages/hmv_cfg_base_stk_stg/: imports.py
transformation_and_Normalization/: transformationNormalization_main.py
transformation_and_Normalization/config/: stage3_models.json
transformation_and_Normalization/hmv_cfg_base_stage3/: imports.py  model1.py  model2.py  model3.py
