[project]
name = "tachygraphy-microtext-analysis-and-normalization"
version = "2025.03.16.post3"
description = ""
authors = [
    { name = "Archisman Karmakar", email = "92569441+ArchismanKarmakar@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (==2.1.3)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "streamlit (>=1.43.2,<2.0.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "datasets (>=3.4.0,<4.0.0)",
    "autograd (>=1.7.0,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "importlib (>=1.0.4,<2.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "accelerate (>=1.5.2,<2.0.0)",
    "peft (>=0.14.0,<0.15.0)",
    "mpi4py (>=4.0.3,<5.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "emoji (>=2.14.1,<3.0.0)",
    "safetensors (>=0.5.3,<0.6.0)",
    "lxml (>=5.3.1,<6.0.0)",
    "evaluate (>=0.4.3,<0.5.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "sacrebleu (>=2.5.1,<3.0.0)",
    "rouge-score (>=0.1.2,<0.2.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "regex (>=2024.11.6,<2025.0.0)",
    "pywin32 (>=309,<310)",
    "pycurl (>=7.45.6,<8.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "diffusers (>=0.32.2,<0.33.0)",
    "onnx (>=1.17.0,<2.0.0)",
    "keras (>=3.9.0,<4.0.0)",
    "h2o (>=3.46.0.6,<4.0.0.0)",
    "distributed (>=2025.2.0,<2026.0.0)",
    "absl-py (>=2.1.0,<3.0.0)",
    "aiohappyeyeballs (>=2.6.1,<3.0.0)",
    "aiohttp (>=3.11.13,<4.0.0)",
    "aiosignal (>=1.3.2,<2.0.0)",
    "altair (>=5.5.0,<6.0.0)",
    "anyio (>=4.8.0,<5.0.0)",
    "asttokens (>=3.0.0,<4.0.0)",
    "astunparse (>=1.6.3,<2.0.0)",
    "attrs (>=25.3.0,<26.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "blinker (>=1.9.0,<2.0.0)",
    "build (>=1.2.2.post1,<2.0.0)",
    "cachecontrol (>=0.14.2,<0.15.0)",
    "cachetools (>=5.5.2,<6.0.0)",
    "certifi (>=2025.1.31,<2026.0.0)",
    "charset-normalizer (>=3.4.1,<4.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "cloudpickle (>=3.1.1,<4.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "comm (>=0.2.2,<0.3.0)",
    "contourpy (>=1.3.1,<2.0.0)",
    "cycler (>=0.12.1,<0.13.0)",
    "dask (>=2025.2.0,<2026.0.0)",
    "debugpy (>=1.8.13,<2.0.0)",
    "decorator (>=5.2.1,<6.0.0)",
    "distlib (>=0.3.9,<0.4.0)",
    "dulwich (>=0.22.8,<0.23.0)",
    "et-xmlfile (>=2.0.0,<3.0.0)",
    "executing (>=2.2.0,<3.0.0)",
    "fastjsonschema (>=2.21.1,<3.0.0)",
    "filelock (>=3.18.0,<4.0.0)",
    "findpython (>=0.6.3,<0.7.0)",
    "flatbuffers (>=25.2.10,<26.0.0)",
    "fonttools (>=4.56.0,<5.0.0)",
    "frozenlist (>=1.5.0,<2.0.0)",
    "gast (>=0.6.0,<0.7.0)",
    "gitdb (>=4.0.12,<5.0.0)",
    "gitpython (>=3.1.44,<4.0.0)",
    "google-pasta (>=0.2.0,<0.3.0)",
    "grpcio (>=1.71.0,<2.0.0)",
    "h11 (>=0.14.0,<0.15.0)",
    "h5py (>=3.13.0,<4.0.0)",
    "httpcore (>=1.0.7,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "huggingface-hub (>=0.29.3,<0.30.0)",
    "idna (>=3.10,<4.0)",
    "importlib-metadata (>=8.6.1,<9.0.0)",
    "installer (>=0.7.0,<0.8.0)",
    "ipython (>=9.0.2,<10.0.0)",
    "ipython-pygments-lexers (>=1.1.1,<2.0.0)",
    "jaraco-classes (>=3.4.0,<4.0.0)",
    "jaraco-context (>=6.0.1,<7.0.0)",
    "jaraco-functools (>=4.1.0,<5.0.0)",
    "jedi (>=0.19.2,<0.20.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "jsonschema (>=4.23.0,<5.0.0)",
    "jsonschema-specifications (>=2024.10.1,<2025.0.0)",
    "jupyter-client (>=8.6.3,<9.0.0)",
    "jupyter-core (>=5.7.2,<6.0.0)",
    "kagglehub (>=0.3.10,<0.4.0)",
    "keyring (>=25.6.0,<26.0.0)",
    "kiwisolver (>=1.4.8,<2.0.0)",
    "libclang (>=18.1.1,<19.0.0)",
    "locket (>=1.0.0,<2.0.0)",
    "markdown (>=3.7,<4.0)",
    "markdown-it-py (>=3.0.0,<4.0.0)",
    "markupsafe (>=3.0.2,<4.0.0)",
    "matplotlib-inline (>=0.1.7,<0.2.0)",
    "mdurl (>=0.1.2,<0.2.0)",
    "ml-dtypes (>=0.5.1,<0.6.0)",
    "more-itertools (>=10.6.0,<11.0.0)",
    "mpmath (>=1.3.0,<2.0.0)",
    "msgpack (>=1.1.0,<2.0.0)",
    "multidict (>=6.1.0,<7.0.0)",
    "namex (>=0.0.8,<0.0.9)",
    "narwhals (>=1.30.0,<2.0.0)",
    "nest-asyncio (>=1.6.0,<2.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "opt-einsum (>=3.4.0,<4.0.0)",
    "optree (>=0.14.1,<0.15.0)",
    "packaging (>=24.2,<25.0)",
    "parso (>=0.8.4,<0.9.0)",
    "partd (>=1.4.2,<2.0.0)",
    "pbs-installer (>=2025.3.11,<2026.0.0)",
    "pkginfo (>=1.12.1.2,<2.0.0.0)",
    "platformdirs (>=4.3.6,<5.0.0)",
    "portalocker (>=3.1.1,<4.0.0)",
    "prompt-toolkit (>=3.0.50,<4.0.0)",
    "propcache (>=0.3.0,<0.4.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "pure-eval (>=0.2.3,<0.3.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "pydeck (>=0.9.1,<0.10.0)",
    "pygments (>=2.19.1,<3.0.0)",
    "pyparsing (>=3.2.1,<4.0.0)",
    "pyproject-hooks (>=1.2.0,<2.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pytz (>=2025.1,<2026.0)",
    "pywin32-ctypes (>=0.2.3,<0.3.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pyzmq (>=26.3.0,<27.0.0)",
    "rapidfuzz (>=3.12.2,<4.0.0)",
    "referencing (>=0.36.2,<0.37.0)",
    "requests (>=2.32.3,<3.0.0)",
    "requests-toolbelt (>=1.0.0,<2.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "rpds-py (>=0.23.1,<0.24.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "setuptools (>=76.0.0,<77.0.0)",
    "shellingham (>=1.5.4,<2.0.0)",
    "six (>=1.17.0,<2.0.0)",
    "smmap (>=5.0.2,<6.0.0)",
    "sniffio (>=1.3.1,<2.0.0)",
    "sortedcontainers (>=2.4.0,<3.0.0)",
    "soupsieve (>=2.6,<3.0)",
    "stack-data (>=0.6.3,<0.7.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "tblib (>=3.0.0,<4.0.0)",
    "tenacity (>=9.0.0,<10.0.0)",
    "tensorboard (>=2.19.0,<3.0.0)",
    "tensorboard-data-server (>=0.7.2,<0.8.0)",
    "termcolor (>=2.5.0,<3.0.0)",
    "threadpoolctl (>=3.6.0,<4.0.0)",
    "tokenizers (>=0.21.1,<0.22.0)",
    "toml (>=0.10.2,<0.11.0)",
    "tomlkit (>=0.13.2,<0.14.0)",
    "toolz (>=1.0.0,<2.0.0)",
    "tornado (>=6.4.2,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "traitlets (>=5.14.3,<6.0.0)",
    "trove-classifiers (>=2025.3.13.13,<2026.0.0.0)",
    "typing-extensions (>=4.12.2,<5.0.0)",
    "tzdata (>=2025.1,<2026.0)",
    "urllib3 (>=2.3.0,<3.0.0)",
    "virtualenv (>=20.29.3,<21.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "wcwidth (>=0.2.13,<0.3.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "wheel (>=0.45.1,<0.46.0)",
    "wrapt (>=1.17.2,<2.0.0)",
    "xxhash (>=3.5.0,<4.0.0)",
    "yarl (>=1.18.3,<2.0.0)",
    "zict (>=3.0.0,<4.0.0)",
    "zipp (>=3.21.0,<4.0.0)",
    "zstandard (>=0.23.0,<0.24.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
